@@ -1,8 +1,8 @@
 Package: GGIR
 Type: Package
 Title: Raw Accelerometer Data Analysis
-Version: 1.5-16
-Date: 2018-1-17
+Version: 1.5-17
+Date: 2018-2-19
 Authors@R: c(person("Vincent T","van Hees",role=c("aut","cre"),
                   email="vincentvanhees@gmail.com"),
                   person("Zhou","Fang",role="ctb"),
@@ -24,7 +24,7 @@ Depends: stats, utils, R (>= 2.10)
 NeedsCompilation: yes
 LinkingTo: Rcpp
 VignetteBuilder: knitr
-Packaged: 2018-01-17 14:14:24 UTC; vincent
+Packaged: 2018-02-19 13:49:42 UTC; vincent
 Author: Vincent T van Hees [aut, cre],
   Zhou Fang [ctb],
   Jing Hua Zhao [ctb],
@@ -33,4 +33,4 @@ Author: Vincent T van Hees [aut, cre],
   Severine Sabia [ctb],
   Jairo H Migueles [ctb]
 Repository: CRAN
-Date/Publication: 2018-01-17 15:08:58 UTC
+Date/Publication: 2018-02-19 16:09:34 UTC
