@@ -1,5 +1,6 @@
 g.part3 = function(metadatadir=c(),f0,f1,anglethreshold = 5,timethreshold = 5, 
-                   acc.metric="ENMO",ignorenonwear=FALSE,overwrite=FALSE,desiredtz="Europe/London") {
+                   acc.metric="ENMO",ignorenonwear=FALSE,overwrite=FALSE,desiredtz="Europe/London",
+                   constrain2range=TRUE) {
   # description: function to apply sleep detection functions to milestone data generated by g.part1
   #------------------------------------
   # create output directory if it does not exist
@@ -58,7 +59,8 @@ g.part3 = function(metadatadir=c(),f0,f1,anglethreshold = 5,timethreshold = 5,
       load(paste(metadatadir,"/meta/basic/",fnames[i],sep=""))
       if (M$filecorrupt == FALSE & M$filetooshort == FALSE) {
         IMP = g.impute(M,I,strategy=1,hrs.del.start=0,hrs.del.end=0,maxdur=0)
-        SLE = g.sib.det(M,IMP,I,twd=c(-12,12),timethreshold=timethreshold,anglethreshold=anglethreshold,acc.metric=acc.metric,desiredtz=desiredtz)
+        SLE = g.sib.det(M,IMP,I,twd=c(-12,12),timethreshold=timethreshold,anglethreshold=anglethreshold,
+                        acc.metric=acc.metric,desiredtz=desiredtz,constrain2range=constrain2range)
         L5list = SLE$L5list
         lightson = SLE$lightson
         lightsout = SLE$lightsout
