@@ -10,7 +10,7 @@
 \usage{
   g.sib.det(M,IMP,I,twd=c(-12,12),anglethreshold = 5, 
                      timethreshold = c(5,10), acc.metric = "ENMO",
-                     desiredtz="Europe/London")
+                     desiredtz="Europe/London",constrain2range=TRUE)
 }
 \arguments{
   \item{M}{
@@ -37,8 +37,12 @@
     interest need to be calculated in M (see \link{g.part1})
   }
   \item{desiredtz}{
-  See \link{g.part3}
+    See \link{g.part3}
   }
+  \item{constrain2range}{
+    See \link{g.part3}
+  }
+  
 }
 \value{
 \itemize{
